--- a/retrodungeon.html
+++ b/retrodungeon.html
@@ -2,13 +2,26 @@
 
 <html lang="en">
 
-<body style="background-color:powderblue;">
+<head>
+    <meta charset="UTF-8">
+    <meta name ="viewport" content=""width=device-width, initial-scale="1.0">
+    <title> Retro Dungeon Traveller </title>
+    <link rel = "stylesheet" href="style.css" type = "text/css" />
+</head>
+
+<body style="background-color:#E1C4BD;">
     <center>
-    <head>
-        <title> Retro Dungeon Traveller </title>
-    </head>
     <body>
-        <h1> Retro Dungeon Traveller </h1>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="#">EXPERIENCE</a></li>
+                <li><a href="#">PLACES</a></li>
+                <li><a href="#">MY BEAUTY ROUTINE</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+        <div class="style1" > <h1> Hi! I'm Carissa Mashinta Kurniawan </h1> </div>
         <h2> Hi! My name is Carissa Mashinta </h2>
         <p> People call me Carissa. This is the picture of myself :) </p>
         <img src="./C56654B4-9C9D-4E7E-82DB-9D17F2BB215C.jpeg" width="600" height="800" class="center" />
