--- a/retrodungeon.html
+++ b/retrodungeon.html
@@ -46,15 +46,6 @@
         </div>
     </section>
 
-    <section id="home">
-        <div class="main" > 
-            <h1 class="headings"> EXPEDITION <br> HAPPINESS </h1> 
-            <audio controls autoplay loop>
-                <source src="audio/audio1.mp3" type ="audio/mpeg"/>
-            </audio>
-        </div>
-    </section>
-
     <section id="collaboration">
         <h1 class="headings"> COLLABORATION </h1>
         <div id ="pic">
@@ -69,13 +60,13 @@
                 </p>
                 <br>
                 <p>
-                    Iceland, is one of the most impressive place I have ever been so far.
+                    Iceland, is one of the most impressive places I have ever been so far.
                     There are so much strangely beautiful landscape to explore in Iceland.
                     The land magically bring calm and heal my soul. 
                     I am going back to Iceland next summer and I am opening a collaboration proposal.
                     I call this trip "Expedition Happiness".
                     It can be anything! Product photoshot, landscape photoshot, or even travelling buddy.
-                    Feel free to reach me our if you are interested!
+                    Feel free to reach me out if you are interested!
                 </p>
             </div>
         </div>
